--- a/series.conf
+++ b/series.conf
@@ -26260,6 +26260,7 @@
 	patches.suse/vt-selection-push-sel_lock-up.patch
 	patches.suse/0001-media-ov519-add-missing-endpoint-sanity-checks.patch
 	patches.suse/0001-media-stv06xx-add-missing-descriptor-sanity-checks.patch
+	patches.suse/USB-core-Fix-free-while-in-use-bug-in-the-USB-S-Glib.patch
 
 	# davem/net
 	patches.suse/slcan-Don-t-transmit-uninitialized-stack-data-in-pad.patch
