--- a/series.conf
+++ b/series.conf
@@ -26545,6 +26545,7 @@
 	# Filesystem
 	########################################################
 	patches.suse/procfs-add-tunable-for-fd-fdinfo-dentry-retention.patch
+	patches.suse/fs-namespace.c-fix-mountpoint-reference-counter-race.patch
 
 	########################################################
 	# xfs/ext4/btrfs/reiserfs
