block, bfq: fix use-after-free in bfq_idle_slice_timer_body (CVE-2020-12657 bsc#1171205 bsc#1168760).

--- a/series.conf
+++ b/series.conf
@@ -26258,6 +26258,7 @@
 	patches.suse/blktrace-fix-dereference-after-null-check.patch
 	patches.suse/vt-selection-push-console-lock-down.patch
 	patches.suse/vt-selection-push-sel_lock-up.patch
+	patches.suse/block-bfq-fix-use-after-free-in-bfq_idle_slice_timer.patch
 	patches.suse/0001-media-ov519-add-missing-endpoint-sanity-checks.patch
 	patches.suse/0001-media-stv06xx-add-missing-descriptor-sanity-checks.patch
 	patches.suse/USB-core-Fix-free-while-in-use-bug-in-the-USB-S-Glib.patch
