mwifiex: Fix possible buffer overflows in mwifiex_ret_wmm_get_status() (CVE-2020-12654 bsc#1171202).

--- a/series.conf
+++ b/series.conf
@@ -26243,6 +26243,7 @@
 	patches.suse/vfs-fix-do_last-regression.patch
 	patches.suse/simple_recursive_removal-kernel-side-rm-rf-for-ramfs.patch
 	patches.suse/mwifiex-fix-unbalanced-locking-in-mwifiex_process_co.patch
+	patches.suse/mwifiex-Fix-possible-buffer-overflows-in-mwifiex_ret.patch
 	patches.suse/libertas-dont-exit-from-lbs_ibss_join_existing-with.patch
 	patches.suse/libertas-make-lbs_ibss_join_existing-return-error.patch
 	patches.suse/ext4-add-cond_resched-to-ext4_protect_reserved_inode.patch
