--- a/series.conf
+++ b/series.conf
@@ -26244,6 +26244,7 @@
 	patches.suse/simple_recursive_removal-kernel-side-rm-rf-for-ramfs.patch
 	patches.suse/mwifiex-fix-unbalanced-locking-in-mwifiex_process_co.patch
 	patches.suse/mwifiex-Fix-possible-buffer-overflows-in-mwifiex_ret.patch
+	patches.suse/mwifiex-Fix-possible-buffer-overflows-in-mwifiex_cmd.patch
 	patches.suse/libertas-dont-exit-from-lbs_ibss_join_existing-with.patch
 	patches.suse/libertas-make-lbs_ibss_join_existing-return-error.patch
 	patches.suse/ext4-add-cond_resched-to-ext4_protect_reserved_inode.patch
