xsk: Add missing check on user supplied headroom size (CVE-2020-12659 bsc#1171214).

--- a/series.conf
+++ b/series.conf
@@ -53384,6 +53384,7 @@
 	patches.suse/cifs-ignore-cached-share-root-handle-closing-errors.patch
 	patches.suse/tracing-fix-the-race-between-registering-snapshot-event-trigger-and-triggering-snapshot-operation.patch
 	patches.suse/mac80211_hwsim-Use-kstrndup-in-place-of-kasprintf.patch
+	patches.suse/xsk-Add-missing-check-on-user-supplied-headroom-size.patch
 	patches.suse/ALSA-ctxfi-Remove-unnecessary-cast-in-kfree.patch
 	patches.suse/ALSA-hda-realtek-Enable-the-headset-mic-on-Asus-FX50.patch
 	patches.suse/ALSA-usb-audio-Filter-error-from-connector-kctl-ops-.patch
