xfs: add agf freeblocks verify in xfs_agf_verify (bsc#1171217 CVE-2020-12655).

--- a/series.conf
+++ b/series.conf
@@ -26263,6 +26263,7 @@
 	patches.suse/block-bfq-fix-use-after-free-in-bfq_idle_slice_timer.patch
 	patches.suse/0001-media-ov519-add-missing-endpoint-sanity-checks.patch
 	patches.suse/0001-media-stv06xx-add-missing-descriptor-sanity-checks.patch
+	patches.suse/xfs-add-agf-freeblocks-verify-in-xfs_agf_verify.patch
 	patches.suse/USB-core-Fix-free-while-in-use-bug-in-the-USB-S-Glib.patch
 
 	# davem/net
