--- a/series.conf
+++ b/series.conf
@@ -27205,6 +27205,7 @@
 	patches.suse/misc-pci_endpoint_test-Fix-to-support-10-pci-endpoin.patch
 	patches.suse/s390-cpuinfo-fix-wrong-output-when-cpu0-is-offline
 	patches.suse/s390-diag-fix-display-of-diagnose-call-statistics
+	patches.suse/SUNRPC-Fix-a-potential-buffer-overflow-in-svc_print_.patch
 	patches.suse/ftrace-kprobe-show-the-maxactive-number-on-kprobe_events.patch
 	patches.suse/ext4-Avoid-ENOSPC-when-avoiding-to-reuse-recently-de.patch
 	patches.suse/ext4-fix-incorrect-inodes-per-group-in-error-message.patch
