perf/hwbp: Simplify the perf-hwbp code, fix documentation (bnc#1012382, bsc#1089895, CVE-2018-1000199, bsc#1171665).

--- a/series.conf
+++ b/series.conf
@@ -14810,6 +14810,7 @@
 	patches.suse/x86-alternatives-fixup-alternative_call_2
 	patches.suse/x86-platform-uv-fix-critical-uv-mmr-address-error
 	patches.suse/perf-x86-intel-fix-linear-ip-of-pebs-real_ip-on-haswell-and-later-cpus
+	patches.suse/perf-hwbp-Simplify-the-perf-hwbp-code-fix-doc.patch
 	patches.suse/drm-i915-dmc-DMC-1.07-for-Cannonlake
 	patches.suse/drm-i915-Apply-headless-DMC-workaround-for-CNL
 	patches.suse/drm-i915-cnl-apply-Display-WA-1178-to-fix-type-C-don
