--- a/series.conf
+++ b/series.conf
@@ -26267,6 +26267,7 @@
 	patches.suse/0001-media-stv06xx-add-missing-descriptor-sanity-checks.patch
 	patches.suse/xfs-add-agf-freeblocks-verify-in-xfs_agf_verify.patch
 	patches.suse/USB-core-Fix-free-while-in-use-bug-in-the-USB-S-Glib.patch
+	patches.suse/USB-gadget-fix-illegal-array-access-in-binding-with-.patch
 
 	# davem/net
 	patches.suse/slcan-Don-t-transmit-uninitialized-stack-data-in-pad.patch
