spi: spi-dw: Add lock protect dw_spi rx/tx to prevent concurrent calls (CVE-2020-12769 bsc#1171983).

--- a/series.conf
+++ b/series.conf
@@ -26098,6 +26098,7 @@
 	patches.suse/Btrfs-fix-infinite-loop-during-nocow-writeback-due-t.patch
 	patches.suse/dmaengine-Fix-access-to-uninitialized-dma_slave_caps.patch
 	patches.suse/arm64-Revert-support-for-execute-only-user-mappings.patch
+	patches.suse/spi-spi-dw-Add-lock-protect-dw_spi-rx-tx-to-prevent-.patch
 	patches.suse/ftrace-avoid-potential-division-by-zero-in-function-profiler.patch
 	patches.suse/kernel-trace-fix-do-not-unregister-tracepoints-when-register-sched_migrate_task-fail.patch
 	patches.suse/can-can_dropped_invalid_skb-ensure-an-initialized-he.patch
