selinux: properly handle multiple messages in selinux_netlink_send() (CVE-2020-10751 bsc#1171189).

--- a/series.conf
+++ b/series.conf
@@ -26268,6 +26268,7 @@
 	patches.suse/0001-media-stv06xx-add-missing-descriptor-sanity-checks.patch
 	patches.suse/xfs-add-agf-freeblocks-verify-in-xfs_agf_verify.patch
 	patches.suse/USB-core-Fix-free-while-in-use-bug-in-the-USB-S-Glib.patch
+	patches.suse/selinux-properly-handle-multiple-messages-in-selinux.patch
 	patches.suse/USB-gadget-fix-illegal-array-access-in-binding-with-.patch
 
 	# davem/net
