--- a/series.conf
+++ b/series.conf
@@ -26269,6 +26269,7 @@
 	patches.suse/xfs-add-agf-freeblocks-verify-in-xfs_agf_verify.patch
 	patches.suse/USB-core-Fix-free-while-in-use-bug-in-the-USB-S-Glib.patch
 	patches.suse/selinux-properly-handle-multiple-messages-in-selinux.patch
+	patches.suse/netlabel-cope-with-NULL-catmap.patch
 	patches.suse/USB-gadget-fix-illegal-array-access-in-binding-with-.patch
 
 	# davem/net
