--- a/series.conf
+++ b/series.conf
@@ -26610,6 +26610,7 @@
 	patches.suse/NFSv4.1-bc-request-hold-xprt-ref.patch
 
 	patches.suse/sunrpc-svcauth_gss_register_pseudoflavor-must-reject.patch
+	patches.suse/sunrpc-clean-up-properly-in-gss_mech_unregister.patch
 
 	########################################################
 	# Overlayfs
