kabi fix for sunrpc-clean-up-properly-in-gss_mech_unregister (bsc#1171219, CVE-2020-12656).

--- a/series.conf
+++ b/series.conf
@@ -27140,6 +27140,8 @@
 
 	patches.kabi/ptp_clock-kABI-workaround.patch
 
+	patches.kabi/sunrpc-clean-up-properly-in-gss_mech_unregister.patch
+
 	########################################################
 	# You'd better have a good reason for adding a patch
 	# below here.
