sunrpc: svcauth_gss_register_pseudoflavor must reject duplicate registrations (bsc#1171219, CVE-2020-12656).

--- a/series.conf
+++ b/series.conf
@@ -26609,6 +26609,8 @@
 	patches.suse/NFS-optional-NFSv4_2-fix.patch
 	patches.suse/NFSv4.1-bc-request-hold-xprt-ref.patch
 
+	patches.suse/sunrpc-svcauth_gss_register_pseudoflavor-must-reject.patch
+
 	########################################################
 	# Overlayfs
 	########################################################
