fs/binfmt_elf.c: allocate initialized memory in fill_thread_core_info() (CVE-2020-10732 bsc#1171220).

--- a/series.conf
+++ b/series.conf
@@ -26271,6 +26271,7 @@
 	patches.suse/selinux-properly-handle-multiple-messages-in-selinux.patch
 	patches.suse/netlabel-cope-with-NULL-catmap.patch
 	patches.suse/USB-gadget-fix-illegal-array-access-in-binding-with-.patch
+	patches.suse/fs-binfmt_elf.c-allocate-initialized-memory-in-fill_.patch
 
 	# davem/net
 	patches.suse/slcan-Don-t-transmit-uninitialized-stack-data-in-pad.patch
