--- a/series.conf
+++ b/series.conf
@@ -26465,6 +26465,8 @@
 
 	patches.suse/drivers-base-memory.c-cache-blocks-in-radix-tree-to-.patch
 
+	patches.suse/relay-handle-alloc_percpu-returning-NULL-in-relay_open.patch
+
 	########################################################
 	# misc small fixes
 	########################################################
